# QAM

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  DOCS.md  README.md  TODO.md  environment.yml  pre-setup.sh  pyproject.toml  setup.py  setup.sh  test-model.py  test.py
qam/: constants.py  main.py  utils.py
qam/config/: benchmark.yaml  constants.yaml  pl_trainer_callbacks  preprocess.yaml  symbols.yaml  train.yaml
qam/config/loss/: focal.yaml
qam/config/lr_scheduler/metric_based/: reduce_on_plateau.yaml
qam/config/lr_scheduler/step_based/: cosine_annealing.yaml  exponential.yaml  step.yaml
qam/config/model/: conf_enc_with_heads.yaml  fast_conformer.yaml  ppo_network.yaml  rl_network.yaml
qam/inference/: CMakeLists.txt  inference.py  utils.py
qam/inference/bolt/: .gitignore  CMakeLists.txt  demo.cpp  trial.cpp
qam/inference/bolt/include/bolt/: inference.hh  model.hh  utils.hh
qam/inference/bolt/lib/: binding.cpp
qam/modules/: __init__.py  conf_encoder.py  conformer.py  convolution.py  encoder.py  euclidean_loss.py  focal_loss.py  nce_model.py  position_encoder.py  transf_decoder.py  transf_encoder.py  transformer.py  utils.py
qam/modules/env/: qam_env.py
qam/modules/loss/: euclidean_loss.py  focal_loss.py
qam/modules/model/: conformer_encoder.py  conformer_for_classification.py  nce_model.py  policy_network.py  ppo_network.py  rl_network.py  rl_policy_network.py
qam/modules/nn/: conformer.py  convolution.py  feedforward.py  multi_layer_perceptron.py  transf_decoder.py  transf_encoder.py
qam/modules/pos_enc/: auto_pos_enc.py  sinusoidal_pos_enc.py
qam/preprocessing/: __init__.py  from_alpaca.py  from_yfinance.py  main.py
qam/training/: main.py  utils.py
qam/training/data/: __init__.py  data_module.py  data_sample.py  dataset.py  reshard.py  utils.py
qam/training/evaluation/: __init__.py  benchmark.py  ssl_predictor.py  utils.py
qam/training/train/: __init__.py  trainer.py
qam/training/training/: ssl_pretrainer.py  trainer.py
src/: demo.cpp  trial.cpp
