cmake_minimum_required(VERSION 3.5)

project(QAM)

set(CMAKE_CXX_STANDARD 23)
set(BUILD_SHARED_LIBS ON)
set(BUILD_TESTING OFF)

if(NOT DEFINED PYTHON_EXECUTABLE OR NOT DEFINED CMAKE_INSTALL_PREFIX OR NOT DEFINED PYTHON_INCLUDE_DIR)
    message(FATAL_ERROR "Please specify PYTHON_EXECUTABLE and CMAKE_INSTALL_PREFIX and PYTHON_INCLUDE_DIR")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -fPIC")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")

find_package(Boost REQUIRED)
find_library(PTHREAD NAMES pthread REQUIRED)
# find_library(DL NAMES dl REQUIRED)
# find_library(UTIL NAMES util REQUIRED)

include(FetchContent)

add_subdirectory(${CMAKE_SOURCE_DIR}/qam/inference)
