[tool.poetry]
name = "qam"
version = "0.1.0"
description = "A Reinforcement learning package to build and deploy trading bot"
authors = ["durgaivelselvan.m <durgaivel0309@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
qam = "qam.main:app"

[tool.poetry.dependencies]
python = "~3.13.0"
filterpy = "^1.4"
hydra-core = "^1.3"
requests = "~2"
torchmetrics = "~1.8.0"
tensorboard = "*"
pytorch-lightning = "~2.6.0"
typer = {extras = ["all"], version = "*"}
torch = "~2.9.0"
nemo-asr = "0.9.0"
infinibatch = "*"
torchrl = "~0.10.0"
ray = "~2.53.0"
yfinance = "0.2.37"
seaborn = "~0.13.2"
matplotlib = "~3.10.8"

[tool.poetry.dev-dependencies]
pylint = "^3.0"
pre-commit = "^3.0"
black = "^24.0"
isort = ">5.0"
clang-format = "^18.0"

[build-system]
requires = ["poetry-core^1.0.0"]
build-backend = "poetry.core.masonry.api"
